# whisper-wall

./: .gitignore  Cargo.toml  Makefile  NOTES.md  README.md  scaffold.toml  spel.toml  whisper-wall-idl.json
docs/: public-sequencer.md
examples/: Cargo.toml
methods/: Cargo.toml
methods/guest/: Cargo.toml
scripts/: demo.sh  launch-basecamp.sh
ui/: CMakeLists.txt  flake.nix  manifest.json  metadata.json
ui/ffi/: Cargo.toml
ui/ffi/src/: lib.rs
ui/qml/: Main.qml
ui/src/: WhisperWallBackend.cpp  WhisperWallBackend.h  WhisperWallPlugin.cpp  WhisperWallPlugin.h  main.cpp
whisper_wall_core/: Cargo.toml
whisper_wall_core/src/: lib.rs
