[package]
name = "whisper_wall-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "whisper_wall"
path = "src/bin/whisper_wall.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", rev = "refs/heads/main" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
whisper_wall_core = { path = "../../whisper_wall_core" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
ruint = "=1.17.0"

