[workspace]

[package]
name = "whisper_wall_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "whisper_wall_ffi"
crate-type = ["cdylib"]

[dependencies]
nssa        = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
nssa_core   = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
common      = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1", features = ["client"] }
wallet      = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
borsh       = "1.5"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
hex         = "0.4"
tokio       = { version = "1", features = ["rt", "rt-multi-thread"] }
